--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
     "clean": "rm -rf session/*"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "chalk": "^4.1.2",
+    "cheerio": "^1.2.0",
+    "fluent-ffmpeg": "^2.1.3",
+    "fs-extra": "^11.1.0",
     "gifted-baileys": "^2.0.0",
     "gifted-btns": "^1.0.0",
-    "pino": "^8.0.0",
-    "fs-extra": "^11.1.0",
-    "chalk": "^4.1.2",
-    "axios": "^1.4.0",
+    "google-tts-api": "^2.0.2",
+    "moment-timezone": "^0.5.43",
     "node-cache": "^5.1.2",
-    "moment-timezone": "^0.5.43"
+    "pino": "^8.0.0",
+    "translate-google-api": "^1.0.4",
+    "wa-sticker-formatter": "^4.4.4",
+    "yt-search": "^2.13.1"
   }
 }
